--- a/user-manager/pom.xml
+++ b/user-manager/pom.xml
@@ -61,7 +61,20 @@
             <version>1.16.6</version>
             <scope>provided</scope>
         </dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>com.lordofthejars</groupId>
+            <artifactId>nosqlunit-mongodb</artifactId>
+            <version>0.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>2.7.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
