--- a/current-race/pom.xml
+++ b/current-race/pom.xml
@@ -171,6 +171,12 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.1</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Fake mongodb for unit tests -->
         <dependency>
