--- a/current-race/src/main/docker/Dockerfile
+++ b/current-race/src/main/docker/Dockerfile
@@ -2,4 +2,5 @@ FROM java:8
 VOLUME /tmp
 ADD cag-current-race.jar app.jar
 RUN bash -c 'touch /app.jar'
+EXPOSE 10080
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
