--- a/current-race/src/main/docker/Dockerfile
+++ b/current-race/src/main/docker/Dockerfile
@@ -3,4 +3,4 @@ VOLUME /tmp
 ADD cag-current-race.jar app.jar
 RUN bash -c 'touch /app.jar'
 EXPOSE 10080
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar", "--spring.data.mongodb.uri=mongodb://mongo/currentracedb"]
