Nästan framme med cag-rms-client

--- a/cag-rms-client/src/main/Dockerfile
+++ b/cag-rms-client/src/main/Dockerfile
@@ -1,15 +1,12 @@
 FROM node
 
 WORKDIR /app
-ADD webapp_src/ /app
+ADD webapp_src/ /app/webapp_src
 
 RUN npm install -g bower grunt
 RUN echo '{ "allow_root": true }' > /root/.bowerrc
-RUN npm install /app
+RUN npm install /app/webapp_src
 
-EXPOSE 9002 9018
+EXPOSE 9002
 
-#/usr/local/bin/bower -> /usr/local/lib/node_modules/bower/bin/bower
-
-#RUN find / -type f -name grunt 2>/dev/null
-ENTRYPOINT ["/app/node_modules/grunt-cli/bin/grunt", "--gruntfile=/app/Gruntfile.js", "serve"]
+ENTRYPOINT ["/app/webapp_src/node_modules/grunt-cli/bin/grunt", "--gruntfile=/app/webapp_src/Gruntfile.js", "serve"]
