Changed workdir in cag-rms-client dockerfile

--- a/cag-rms-client/src/main/Dockerfile
+++ b/cag-rms-client/src/main/Dockerfile
@@ -1,12 +1,12 @@
 FROM node
 
-WORKDIR /app
 ADD webapp_src/ /app/webapp_src
+WORKDIR /app/webapp_src
 
 RUN npm install -g bower grunt
 RUN echo '{ "allow_root": true }' > /root/.bowerrc
-RUN npm install /app/webapp_src
+RUN npm install
 
 EXPOSE 9002
 
-ENTRYPOINT ["/app/webapp_src/node_modules/grunt-cli/bin/grunt", "--gruntfile=/app/webapp_src/Gruntfile.js", "serve"]
+ENTRYPOINT ["/app/webapp_src/node_modules/grunt-cli/bin/grunt", "serve"]
