--- a/current-race/pom.xml
+++ b/current-race/pom.xml
@@ -26,7 +26,9 @@
     <spring.boot.version>1.3.2.RELEASE</spring.boot.version>
     <io.springfox.version>2.2.2</io.springfox.version>
     <skipITs>true</skipITs>
+    <evosuiteVersion>1.0.3</evosuiteVersion>
   </properties>
+
 
   <dependencies>
     <dependency>
@@ -223,6 +225,14 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Evosuite test generator -->
+    <dependency>
+      <groupId>org.evosuite</groupId>
+      <artifactId>evosuite-standalone-runtime</artifactId>
+      <version>${evosuiteVersion}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -265,7 +275,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.19</version>
+        <version>2.19.1</version>
         <configuration>
           <skipITs>false</skipITs>
         </configuration>
@@ -278,7 +288,54 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <shutdown>exit</shutdown>
+          <properties>
+            <property>
+              <name>listener</name>
+              <value>org.evosuite.runtime.InitializingListener</value>
+            </property>
+          </properties>
+        </configuration>
+      </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.evosuite.plugins</groupId>
+          <artifactId>evosuite-maven-plugin</artifactId>
+          <version>${evosuiteVersion}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>prepare</goal>
+              </goals>
+              <phase>process-test-classes</phase>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>EvoSuite</id>
+      <name>EvoSuite Repository</name>
+      <url>http://www.evosuite.org/m2</url>
+    </pluginRepository>
+  </pluginRepositories>
+
+  <repositories>
+    <repository>
+      <id>EvoSuite</id>
+      <name>EvoSuite Repository</name>
+      <url>http://www.evosuite.org/m2</url>
+    </repository>
+  </repositories>
 
 </project>
